# CompileTimeMagic

./: .gitignore  CMakeLists.txt  CompileTimeMagic.sln  Makefile  README.md  extra_std.h  extra_std.sln
.github/: build_test.yml
.github/workflows/: build_test.yml
CompileTimeMagic/: CompileTimeMagic.vcxproj  CompileTimeMagic.vcxproj.filters  test.cpp
CompileTimeMagic/include/: compile_time_magic.h  has_method.h  has_using.h
extra_std/: extra_std.vcxproj  extra_std.vcxproj.filters  test.cpp
extra_std/include/: compile_time_magic.h  extra_algorithm.h
extra_std/tests/: test_compile_magic.cpp  tests.cpp
include/: assert.h  extra_algorithm.h  string_utils.h
tests/: test_compile_magic.cpp  test_containers.h  tests.cpp
